include/dss_capi.h

    /*! 
    Delivers the number of CPUs on the current PC
    */
    DSS_CAPI_DLL int32_t Parallel_Get_NumCPUs(void);
    /*! 
    Delivers the number of Cores of the local PC
    */
    DSS_CAPI_DLL int32_t Parallel_Get_NumCores(void);
    /*! 
    Gets the ID of the Active Actor
    */
    DSS_CAPI_DLL int32_t Parallel_Get_ActiveActor(void);
    /*! 
    Sets the Active Actor
    */
    DSS_CAPI_DLL void Parallel_Set_ActiveActor(int32_t Value);
    /*!
    Create a new actor, if there are still cores available.    
    */
    DSS_CAPI_DLL void Parallel_CreateActor(void);
    /*! 
    Gets the CPU of the Active Actor
    */
    DSS_CAPI_DLL int32_t Parallel_Get_ActorCPU(void);
    /*! 
    Sets the CPU for the Active Actor
    */
    DSS_CAPI_DLL void Parallel_Set_ActorCPU(int32_t Value);
    /*! 
    Gets the number of Actors created
    */
    DSS_CAPI_DLL int32_t Parallel_Get_NumOfActors(void);
    /*!
    Suspends the host's thread until all the OpenDSS running jobs finish.
    */
    DSS_CAPI_DLL void Parallel_Wait(void);
    /*! 
    Gets the progress of all existing actors in pct
    */
    DSS_CAPI_DLL void Parallel_Get_ActorProgress(int32_t** ResultPtr, int32_t* ResultDims);
    /*! 
    Same as Parallel_Get_ActorProgress but using the global buffer interface for results
    */
    DSS_CAPI_DLL void Parallel_Get_ActorProgress_GR(void);
    /*! 
    Gets the status of each actor
    */
    DSS_CAPI_DLL void Parallel_Get_ActorStatus(int32_t** ResultPtr, int32_t* ResultDims);
    /*! 
    Same as Parallel_Get_ActorStatus but using the global buffer interface for results
    */
    DSS_CAPI_DLL void Parallel_Get_ActorStatus_GR(void);
    /*! 
    Sets ON/OFF (1/0) Parallel features of the Engine
    */
    DSS_CAPI_DLL int32_t Parallel_Get_ActiveParallel(void);
    /*! 
    Delivers if the Parallel features of the Engine are Active
    */
    DSS_CAPI_DLL void Parallel_Set_ActiveParallel(int32_t Value);
    /*! 
    Reads the values of the ConcatenateReports option (1=enabled, 0=disabled)
    */
    DSS_CAPI_DLL int32_t Parallel_Get_ConcatenateReports(void);
    /*! 
    Enable/Disable (1/0) the ConcatenateReports option for extracting monitors data
    */
    DSS_CAPI_DLL void Parallel_Set_ConcatenateReports(int32_t Value);